 - gui: renamed justifyH to alignX, justifyV to alignY
 - gui: renamed anchor_point to point
 - gui: renamed register_for_drag to enable_drag
 - gui: renamed get_object_type to get_region_type
 - gui: renamed clear_all_points to clear_all_anchors
 - gui: renamed [get/set/modify]_point to [get/set/modify]_anchor
 - gui: renamed any function of the form "get_num_[...]()" into "get_[...]_count()"
 - gui: removed Frame:on from Lua API (instead, call scripts directly, e.g.: frame:on_update())
 - gui: removed the sprite class
 - gui: removed region::get_base()
 - gui: removed region::push_on_lua()
 - gui: removed region::get_id() and set_id()
 - gui: removed anchor::set_object() (now a reference, cannot change)
 - gui: removed font_string::get_shadow_x_offset()
 - gui: removed font_string::get_shadow_y_offset()
 - gui: removed region::set_abs_point and region::set_rel_point, use set_point() instead
 - gui: removed anchor::get_abs_x/get_abs_y and added anchor::get_point
 - gui: removed region::get_abs_width/height and added region::get_dimensions()
 - gui: removed region::get_apparent_width/height and added region::get_apparent_dimensions()
 - gui: removed region::set_newly_created/is_newly_created (no longer necessary)
 - gui: removed manager::is_loading_ui() (no longer necessary)
 - gui: removed manager::begin() and end()
 - gui: removed frame::is_mouse_enabled; use is_mouse_click_enabled and is_mouse_move_enabled
 - gui: removed frame::is_in_frame; use is_in_region instead
 - gui: removed frame::register_all_events and unregister_all_events
 - gui: removed event class; generic events are now only using event_data
 - gui: removed get_frame_type, use get_region_type instead
 - gui: edit_box::set_text_insets now takes a single bounds2f argument
 - gui: frame::on_script now takes the full script name ("OnUpdate" vs "Update")
 - gui: frame::on_script now takes a 'const event_data&' instead of an 'event*' argument